Added link to crypto arbitrage monitor

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="card" onclick="window.location.href = 'app/time_calculator.html'">
         <a href="app/time_calculator.html">Time Calculator</a>
     </div>
-    <div class="card" onclick="window.location.href = 'arbitrage.abdullahsaquib.com'">
-        <a href="arbitrage.abdullahsaquib.com">Crypto Arbitrage Monitor</a>
+    <div class="card" onclick="window.location.href = 'https://arbitrage.abdullahsaquib.com'">
+        <a href="https://arbitrage.abdullahsaquib.com">Crypto Arbitrage Monitor</a>
     </div>
     <div class="card" onclick="window.location.href = ''">
         <a href="">Coming Soon</a>
