Added Images to PDF Converter

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
     <div class="card" onclick="window.location.href = 'https://arbitrage.abdullahsaquib.com'">
         <a href="https://arbitrage.abdullahsaquib.com">Crypto Arbitrage Monitor</a>
     </div>
+    <div class="card" onclick="window.location.href = 'app/images_to_pdf.html'">
+        <a href="app/images_to_pdf.html">Images to PDF Converter</a>
+    </div>
     <div class="card" onclick="window.location.href = ''">
         <a href="">Coming Soon</a>
     </div>
